--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,5 @@
 MONGOURI=mongodb+srv://admin:admin@cluster0.eoepowl.mongodb.net/?retryWrites=true&w=majority
+AWS_S3_REGION         = "ap-southeast-1"
+AWS_S3_BUCKET         = "customfeedbucket"
+AWS_ACCESS_KEY_ID     = "AKIAV3XRZF7WLEZQMNGD"
+AWS_SECRET_ACCESS_KEY = "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"
