Create utility for upload file

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGOURI=mongodb+srv://admin:admin@cluster0.eoepowl.mongodb.net/?retryWrites=tru
 CLOUDINARY_BUCKET_NAME = "ds72weirj"
 CLOUDINARY_API_KEY = "375199426865894"
 CLOUDINARY_SECRET_KEY = "sVjrSX9-YCUad35Ff1Me3AM2a5k"
+CUSTOM_DOMAIN = "https://feeduiclone.win/"
